<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Custom Maps</string>
    <string name="select_map_name">Custom Maps/Select map</string>
    <string name="create_map_name">Custom Maps/Create map</string>
    <string name="edit_prefs_name">Custom Maps/Settings</string>
    <string name="author">By Marko Teittinen</string>
    <string name="open_source">      Custom Maps app and its source code are published under Apache License, version 2.0.</string>
    <string name="apache_license">Read Apache License 2.0</string>
    <string name="google_code">Visit open source project website</string>
    <string name="app_home">Visit Custom Maps app website</string>

    <!-- custom map -->
    <string name="share_map_failed">Failed to send the map</string>

    <!-- safety warning -->
    <string name="safety_warning_title">IMPORTANT!</string>
    <string name="safety_warning">Many map images that can be used with Custom Maps are not drawn accurately enough to show
      exact GPS locations. Displayed location should be considered approximate at all times.
      \n\nEven within a single map some areas may be better aligned with GPS than others.</string>
    <string name="remind_me_again">Remind me again next time</string>

    <!-- select map -->
    <string name="select_map_to_use">Select map to use</string>
    <string name="no_maps_found_on_sd">No maps found on SD card in CustomMaps folder.\n\nUse menu to create maps and to get 
        help finding them.\n\n Or press \'back\' to exit.</string>
    <string name="create_map_help">Use menu to create maps from photos or from downloaded map images.\n\nTap 
        and hold a map name to modify or delete it.</string>
    <string name="create_map_help_link">Click here to visit Custom Maps web site for sample maps and a tutorial.</string>
    <string name="no_map_sharing_apps">There are no installed apps that can share maps</string>
    <string name="delete_map_dialog_title">Confirm deletion</string>
    <string name="delete_map_dialog">Are you sure you want to delete map\n\"%s\"?</string>
    <string name="delete_map_dialog_positive">Yes - delete</string>
    <string name="delete_map_dialog_negative">No - keep map</string>
    <string name="deleting_map_failed">Failed to delete map \"%s\"</string>
    <string name="local_maps">Local Maps</string>
    <string name="nearby_maps">Nearby Maps</string>
    <string name="other_maps">Other Maps</string>
    <string name="all_maps">All Maps</string>
    
    <!-- help manager -->
    <string name="help_manager_title">Help</string>
    
    <!-- details display -->
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="heading">Heading</string>
    <string name="speed">Speed</string>
    <string name="accuracy">Accuracy</string>
    <string name="no_data_available">N/A</string>
    
    <!-- edit preferences -->
    <string name="metric_title">Use metric units</string>
    <string name="metric_use_metric">Now using metric units</string>
    <string name="metric_use_non_metric">Now using English units</string>
    <string name="multitouch_title">Allow pinch zoom</string>
    <string name="multitouch_use_pinch">Pinch zooming enabled</string>
    <string name="multitouch_dont_use_pinch">Pinch zooming disabled</string>
    <string name="distance_title">Display distance</string>
    <string name="distance_show">Displays distance from user location to center of screen</string>
    <string name="distance_dont_show">Distance is not displayed or computed</string>
    <string name="safety_reminder_title">Show safety reminder</string>
    <string name="safety_reminder_show">Safety reminder will be shown when map is changed</string>
    <string name="safety_reminder_dont_show">Safety reminder will not be shown when map is changed</string>
    <string name="max_map_img_size_title">Maximum map image size</string>
    <string name="max_map_img_size">"%.1f megapixels</string>
    <string name="about_custom_maps">About Custom Maps</string>

    <!-- button items -->
    <string name="button_ok">OK</string>

    <!-- menu items -->
    <string name="select_map">Select map</string>
    <string name="my_location">My location</string>
    <string name="location_details">Location Details</string>
    <string name="share_map">Share map</string>
    <string name="settings">Settings</string>
    <string name="create_map">Create map</string>
    <string name="modify_map">Modify map</string>
    <string name="delete_map">Delete map</string>
    <string name="map_cannot_modify">Part of map set. Cannot be modified or deleted</string>

</resources>