<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

  <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginRight="2dp"
    >
    <TableRow>

      <TextView
          android:layout_marginRight="4dp"
          android:text="@string/longitude"
          android:textColor="#eeeeee"
          android:textStyle="bold" />

      <TextView 
        android:id="@+id/longitudeField"
        android:textColor="#ffffff"
        />
    </TableRow>
    <TableRow>

      <TextView
          android:layout_marginRight="4dp"
          android:text="@string/latitude"
          android:textColor="#eeeeee"
          android:textStyle="bold" />

      <TextView 
        android:id="@+id/latitudeField"
        android:textColor="#ffffff"
        />
    </TableRow>
    <TableRow>

      <TextView
          android:layout_marginRight="4dp"
          android:text="@string/altitude"
          android:textColor="#eeeeee"
          android:textStyle="bold" />

      <TextView 
        android:id="@+id/altitudeField"
        android:textColor="#ffffff"
        />
    </TableRow>
  </TableLayout>
  <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginLeft="2dp"
    >
    <TableRow>

      <TextView
          android:layout_marginRight="4dp"
          android:text="@string/heading"
          android:textColor="#eeeeee"
          android:textStyle="bold" />

      <TextView 
        android:id="@+id/headingField"
        android:textColor="#ffffff"
        />
    </TableRow>
    <TableRow>

      <TextView
          android:layout_marginRight="4dp"
          android:text="@string/speed"
          android:textColor="#eeeeee"
          android:textStyle="bold" />

      <TextView 
        android:id="@+id/speedField"
        android:textColor="#ffffff"
        />
    </TableRow>
    <TableRow>

      <TextView
          android:layout_marginRight="4dp"
          android:text="@string/accuracy"
          android:textColor="#eeeeee"
          android:textStyle="bold" />

      <TextView 
        android:id="@+id/accuracyField"
        android:textColor="#ffffff"
        />
    </TableRow>
  </TableLayout>
</LinearLayout>
